--- a/resources/public/html-includes/photoswipe-boilerplate.html
+++ b/resources/public/html-includes/photoswipe-boilerplate.html
@@ -1,65 +1,97 @@
-<!-- this is the whole of the photoswipe boilerplate as documented
-    [here](https://photoswipe.com/documentation/getting-started.html) with the
-    outermost div removed; it is supplied by the function
-    `smeagol.extensions.photoswipe/photoswipe-processor`, q.v. -->
-    <!-- Background of PhotoSwipe.
-         It's a separate element as animating opacity is faster than rgba(). -->
-    <div class="pswp__bg"></div>
+<div class="gallery" id="gallery{{index}}">
+    <div class="pswp" id="pswp-{{index}}" tabindex="-1" role="dialog" aria-hidden="true">
 
-    <!-- Slides wrapper with overflow:hidden. -->
-    <div class="pswp__scroll-wrap">
+        <!-- this is the whole of the photoswipe boilerplate as documented
+            [here](https://photoswipe.com/documentation/getting-started.html) with the
+            outermost div removed; it is supplied by the function
+            `smeagol.extensions.photoswipe/photoswipe-processor`, q.v. -->
+        <!-- Background of PhotoSwipe.
+                It's a separate element as animating opacity is faster than rgba(). -->
+        <div class="pswp__bg"></div>
 
-        <!-- Container that holds slides.
-            PhotoSwipe keeps only 3 of them in the DOM to save memory.
-            Don't modify these 3 pswp__item elements, data is added later on. -->
-        <div class="pswp__container">
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
-        </div>
+        <!-- Slides wrapper with overflow:hidden. -->
+        <div class="pswp__scroll-wrap">
 
-        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-        <div class="pswp__ui pswp__ui--hidden">
+            <!-- Container that holds slides.
+                    PhotoSwipe keeps only 3 of them in the DOM to save memory.
+                    Don't modify these 3 pswp__item elements, data is added later on. -->
+            <div class="pswp__container">
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+            </div>
 
-            <div class="pswp__top-bar">
+            <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+            <div class="pswp__ui pswp__ui--hidden">
 
-                <!--  Controls are self-explanatory. Order can be changed. -->
+                <div class="pswp__top-bar">
 
-                <div class="pswp__counter"></div>
+                    <!--  Controls are self-explanatory. Order can be changed. -->
 
-                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+                    <div class="pswp__counter"></div>
 
-                <button class="pswp__button pswp__button--share" title="Share"></button>
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
 
-                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
 
-                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
 
-                <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-                <!-- element will get class pswp__preloader--active when preloader is running -->
-                <div class="pswp__preloader">
-                    <div class="pswp__preloader__icn">
-                      <div class="pswp__preloader__cut">
-                        <div class="pswp__preloader__donut"></div>
-                      </div>
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                    <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+                    <!-- element will get class pswp__preloader active when preloader is running -->
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                            <div class="pswp__preloader__cut">
+                                <div class="pswp__preloader__donut"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                <div class="pswp__share-tooltip"></div>
-            </div>
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div>
+                </div>
 
-            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-            </button>
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                </button>
 
-            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-            </button>
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                </button>
 
-            <div class="pswp__caption">
-                <div class="pswp__caption__center"></div>
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center"></div>
+                </div>
+
             </div>
 
         </div>
-
     </div>
+    <script>
+        //<![CDATA[
+        var gallery{{index}} = null;
+        var spec{{index}} = {{spec}};
+        var openGallery{{index}} = function() {
+            if (gallery{{index}}) {
+                try {
+                    gallery{{index}}.destroy();
+                }
+                catch (error) {
+                    console.error(error);
+                }
+            }
+            gallery{{index}} = new PhotoSwipe(document.getElementById("pswp-{{index}}"),
+                PhotoSwipeUI_Default,
+                spec{{index}}.slides,
+                    spec{{index}}.options);
+            gallery{{index}}.init();
+        };
+        if (spec{{index}}.openImmediately) {
+            openGallery{{index}}();
+        }
+        //]]>
+    </script>
+    <p>
+        <button id="open-gallery-{{index}}" onclick="openGallery{{index}}()">Open the gallery</button>
+    </p>
+</div>
